tests/expectations/compiler/core/algorithms/bhp256_hash_to_field.out
<<<<<<< HEAD
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:24
     |
  28 |         let a: field = BHP256::hash_to_field(addr_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:24
     |
  29 |         let b: field = BHP256::hash_to_field(bool_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:24
     |
  30 |         let c: field = BHP256::hash_to_field(field_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:24
     |
  31 |         let d: field = BHP256::hash_to_field(group_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:24
     |
  32 |         let e: field = BHP256::hash_to_field(i8_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:24
     |
  33 |         let f: field = BHP256::hash_to_field(i16_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:24
     |
  34 |         let g: field = BHP256::hash_to_field(i32_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:24
     |
  35 |         let h: field = BHP256::hash_to_field(i64_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:24
     |
  36 |         let i: field = BHP256::hash_to_field(i128_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:24
     |
  37 |         let j: field = BHP256::hash_to_field(u8_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:24
     |
  38 |         let k: field = BHP256::hash_to_field(u16_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:24
     |
  39 |         let l: field = BHP256::hash_to_field(u32_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:24
     |
  40 |         let m: field = BHP256::hash_to_field(u64_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:24
     |
  41 |         let n: field = BHP256::hash_to_field(u128_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:24
     |
  42 |         let o: field = BHP256::hash_to_field(scalar_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:24
     |
  44 |         let q: field = BHP256::hash_to_field(Foo { a: 1u128, b: 1u128 });
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
=======
program test.aleo;

function main:
    input r0 as i8.private;
    input r1 as i16.private;
    input r2 as i32.private;
    input r3 as i64.private;
    input r4 as u8.private;
    input r5 as u16.private;
    input r6 as u32.private;
    input r7 as u64.private;
    hash.bhp256 aleo10qerras5799u6k7rjtc9y3hcwxuykr45qra7x7dp6jgnc0923czqm0lgta into r8 as field;
    hash.bhp256 true into r9 as field;
    hash.bhp256 1field into r10 as field;
    hash.bhp256 1540945439182663264862696551825005342995406165131907382295858612069623286213group into r11 as field;
    hash.bhp256 r0 into r12 as field;
    hash.bhp256 r1 into r13 as field;
    hash.bhp256 r2 into r14 as field;
    hash.bhp256 r3 into r15 as field;
    hash.bhp256 1i128 into r16 as field;
    hash.bhp256 r4 into r17 as field;
    hash.bhp256 r5 into r18 as field;
    hash.bhp256 r6 into r19 as field;
    hash.bhp256 r7 into r20 as field;
    hash.bhp256 1u128 into r21 as field;
    hash.bhp256 1scalar into r22 as field;
    output r8 as field.private;
    output r9 as field.private;
    output r10 as field.private;
    output r11 as field.private;
    output r12 as field.private;
    output r13 as field.private;
    output r14 as field.private;
    output r15 as field.private;
    output r16 as field.private;
    output r17 as field.private;
    output r18 as field.private;
    output r19 as field.private;
    output r20 as field.private;
    output r21 as field.private;
    output r22 as field.private;
    output 2307844965797249460331881975368852660749916111494583915420310056646800962804field as field.private;
>>>>>>> mainnet
